main/default/objects/Account_Product__c/Account_Product__c.object-meta.xml
<CustomObject>
    <label>Account Product</label>
    <nameField>
        <displayFormat>AP-{000000}</displayFormat>
        <label>Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>