main/default/objects/Account_Product__c/fields/Account_Azure_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Azure_ID__c</fullName>
    <formula>Account_Id__r.Azure_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Azure ID</label>
    <type>Text</type>
</CustomField>