main/default/objects/Account_Product__c/fields/Commission_percentage__c.field-meta.xml
<CustomField>
    <fullName>Commission_percentage__c</fullName>
    <label>Commission %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>