main/default/objects/Account_Product__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>