main/default/objects/Account_Product__c/validationRules/Commission_between_0_and_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Commission_between_0_and_100</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Commission_percentage__c  &lt; 0,Commission_percentage__c &gt; 1)</errorConditionFormula>
    <errorMessage>Commission % must be between 0% and 100%</errorMessage>
</ValidationRule>